--- a/.eslintrc
+++ b/.eslintrc
@@ -6,9 +6,7 @@
       "jsx": true
     }
   },
-  "plugins": [
-    "react-hooks"
-  ],
+  "plugins": ["react-hooks"],
   "rules": {
     "react-hooks/rules-of-hooks": "error"
   }
