--- a/manifest.yml
+++ b/manifest.yml
@@ -1,17 +1,17 @@
 modules:
   jira:globalPage:
-    - key: cloudinvoices-hello-world-global-page
+    - key: vantiva-chargeback
       resource: main
       resolver:
         function: resolver
       render: native
-      title: CloudInvoices
+      title: Chargeback Cloud
   function:
     - key: resolver
       handler: index.handler
 resources:
   - key: main
-    path: src/frontend/index.jsx
+    path: src/frontend/index.tsx
 app:
   runtime:
     name: nodejs22.x
