--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
     "@forge/bridge": "5.2.0",
     "@forge/react": "11.2.5",
     "@forge/resolver": "1.6.14",
+    "buffer": "^6.0.3",
+    "form-data": "^4.0.4",
+    "pdf-lib": "^1.17.1",
     "react": "^18.2.0"
   }
 }
