--- a/package.json
+++ b/package.json
@@ -8,15 +8,18 @@
     "lint": "eslint src/**/*"
   },
   "devDependencies": {
+    "@types/js-cookie": "^3.0.6",
     "eslint": "^8.56.0",
     "eslint-plugin-react-hooks": "^4.6.0"
   },
   "dependencies": {
     "@forge/bridge": "5.2.0",
+    "@forge/kvs": "^1.2.1",
     "@forge/react": "11.2.5",
     "@forge/resolver": "1.6.14",
     "buffer": "^6.0.3",
     "form-data": "^4.0.4",
+    "js-cookie": "^3.0.5",
     "pdf-lib": "^1.17.1",
     "react": "^18.2.0"
   }
