--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@forge/react": "11.2.5",
     "@forge/resolver": "1.6.14",
     "buffer": "^6.0.3",
+    "exceljs": "^4.4.0",
     "form-data": "^4.0.4",
     "js-cookie": "^3.0.5",
     "pdf-lib": "^1.17.1",
